create extension if not exists pgcrypto;

create table if not exists public.company (
  id uuid primary key default gen_random_uuid(),
  name text not null,
  baseline_year integer,
  net_zero_year integer,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.department (
  id uuid primary key default gen_random_uuid(),
  company_id uuid not null references public.company(id) on delete cascade,
  name text not null,
  primary_metric text,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),
  unique (company_id, name)
);

create table if not exists public.employee (
  id uuid primary key default gen_random_uuid(),
  department_id uuid not null references public.department(id) on delete restrict,
  password_hash text,
  display_name text not null,
  email text unique not null,
  level integer not null default 1,
  carbon_coin integer not null default 0,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.waste_bin (
  id uuid primary key default gen_random_uuid(),
  qr_code text unique not null,
  location text,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.device (
  id uuid primary key default gen_random_uuid(),
  type text not null,
  display_name text,
  status text not null default 'active',
  last_seen timestamptz,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.emission_factor (
  id uuid primary key default gen_random_uuid(),
  category text not null,
  key text not null,
  value numeric(14, 6) not null,
  unit text not null,
  source text,
  valid_from date not null,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),
  unique (category, key, valid_from)
);

create table if not exists public.device_binding (
  id uuid primary key default gen_random_uuid(),
  employee_id uuid not null references public.employee(id) on delete cascade,
  device_id uuid not null references public.device(id) on delete cascade,
  id_token text,
  status text not null default 'active',
  refresh_token_hash text,
  bound_at timestamptz not null default now(),
  last_seen timestamptz,
  revoked_at timestamptz,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.binding_code (
  id uuid primary key default gen_random_uuid(),
  code text unique not null,
  device_id uuid not null references public.device(id) on delete cascade,
  employee_id uuid references public.employee(id) on delete set null,
  device_binding_id uuid references public.device_binding(id) on delete set null,
  status text not null default 'pending',
  device_secret_hash text,
  expires_at timestamptz not null,
  consumed_at timestamptz,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.app_session (
  id uuid primary key default gen_random_uuid(),
  employee_id uuid not null references public.employee(id) on delete cascade,
  refresh_token_hash text not null,
  status text not null default 'active',
  created_at timestamptz not null default now(),
  expires_at timestamptz not null,
  last_used_at timestamptz,
  revoked_at timestamptz
);

create table if not exists public.travel_record (
  id uuid primary key default gen_random_uuid(),
  employee_id uuid not null references public.employee(id) on delete cascade,
  factor_id uuid references public.emission_factor(id) on delete set null,
  track_type text,
  transport_mode text not null,
  origin text,
  destination text,
  travel_date date not null,
  amount numeric(14, 2),
  distance_km numeric(14, 3),
  co2e_kg numeric(14, 6),
  receipt_id text,
  status text not null default 'pending',
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.waste_session (
  id uuid primary key default gen_random_uuid(),
  employee_id uuid not null references public.employee(id) on delete cascade,
  bin_id uuid not null references public.waste_bin(id) on delete restrict,
  scan_at timestamptz not null default now(),
  confirm_at timestamptz,
  status text not null default 'open',
  lock_held boolean not null default false,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.waste_event (
  id uuid primary key default gen_random_uuid(),
  bin_id uuid not null references public.waste_bin(id) on delete restrict,
  session_id uuid references public.waste_session(id) on delete set null,
  device_id uuid references public.device(id) on delete set null,
  factor_id uuid references public.emission_factor(id) on delete set null,
  event_at timestamptz not null default now(),
  waste_type text not null,
  confidence numeric(5, 4),
  weight_g numeric(14, 3),
  co2e_kg numeric(14, 6),
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.elevator_trip (
  id uuid primary key default gen_random_uuid(),
  employee_id uuid not null references public.employee(id) on delete cascade,
  factor_id uuid references public.emission_factor(id) on delete set null,
  ts_in timestamptz not null,
  ts_out timestamptz,
  floor_in integer not null,
  floor_out integer not null,
  floor_delta integer,
  direction text,
  co2e_kg numeric(14, 6),
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create table if not exists public.digital_usage (
  id uuid primary key default gen_random_uuid(),
  employee_id uuid not null references public.employee(id) on delete cascade,
  device_id uuid references public.device(id) on delete set null,
  factor_id uuid references public.emission_factor(id) on delete set null,
  usage_date date not null,
  path_type text not null,
  sensing_mode text not null,
  collected_at timestamptz not null,
  pc_active_hours numeric(8, 2),
  pc_idle_hours numeric(8, 2),
  pc_avg_cpu_util numeric(5, 2),
  cpu_model text,
  printer_serial text,
  printer_page_counter integer,
  print_pages integer,
  drive_usage_gb numeric(12, 3),
  drive_trash_gb numeric(12, 3),
  printer_identity_unknown boolean not null default false,
  co2e_kg numeric(14, 6),
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create index if not exists idx_department_company_id on public.department(company_id);
create index if not exists idx_employee_department_id on public.employee(department_id);
create index if not exists idx_device_binding_employee_id on public.device_binding(employee_id);
create index if not exists idx_device_binding_device_id on public.device_binding(device_id);
create index if not exists idx_binding_code_device_id on public.binding_code(device_id);
create index if not exists idx_binding_code_employee_id on public.binding_code(employee_id);
create index if not exists idx_binding_code_device_binding_id on public.binding_code(device_binding_id);
create index if not exists idx_app_session_employee_id on public.app_session(employee_id);
create index if not exists idx_travel_record_employee_id on public.travel_record(employee_id);
create index if not exists idx_travel_record_factor_id on public.travel_record(factor_id);
create index if not exists idx_waste_session_employee_id on public.waste_session(employee_id);
create index if not exists idx_waste_session_bin_id on public.waste_session(bin_id);
create index if not exists idx_waste_event_bin_id on public.waste_event(bin_id);
create index if not exists idx_waste_event_session_id on public.waste_event(session_id);
create index if not exists idx_waste_event_device_id on public.waste_event(device_id);
create index if not exists idx_waste_event_factor_id on public.waste_event(factor_id);
create index if not exists idx_elevator_trip_employee_id on public.elevator_trip(employee_id);
create index if not exists idx_elevator_trip_factor_id on public.elevator_trip(factor_id);
create index if not exists idx_digital_usage_employee_id on public.digital_usage(employee_id);
create index if not exists idx_digital_usage_factor_id on public.digital_usage(factor_id);
create index if not exists idx_digital_usage_device_id on public.digital_usage(device_id);

-- 電腦：per-device,一裝置一列(電腦本身即測量主體),員工層碳排以加總取得
create unique index if not exists uq_digital_usage_device on public.digital_usage
  (employee_id, usage_date, path_type, device_id)
  where path_type = 'computer' and sensing_mode = 'auto';

-- 印表機(自動,Agent SNMP):per-printer,一印表機一列(裝置僅為觀測者);
-- 以 device_id 分列會使桌機＋筆電同指一台印表機時重複計算,見 [D14]
create unique index if not exists uq_digital_usage_printer on public.digital_usage
  (employee_id, usage_date, path_type, printer_serial)
  where path_type = 'printer' and sensing_mode = 'auto';

-- 印表機(手動,App 上傳):per-employee-day,一員工一天一列;
-- 手動上傳無 printer_serial(NULL),故不套 per-printer 鍵、以 sensing_mode 分列,見 [D16]
create unique index if not exists uq_digital_usage_printer_manual on public.digital_usage
  (employee_id, usage_date, path_type, sensing_mode)
  where path_type = 'printer' and sensing_mode = 'manual';

-- 雲端:per-account,同員工多裝置查得同值,納入裝置欄會重複計算
create unique index if not exists uq_digital_usage_account on public.digital_usage
  (employee_id, usage_date, path_type)
  where path_type = 'drive' and sensing_mode = 'auto';

-- 印表機(自動,序號查無):三候選 OID 皆查無序號時退回以 device_id 歸鍵;
-- printer_serial 為 NULL 時 Postgres 視為互不相等,uq_digital_usage_printer 的 ON CONFLICT 不會觸發,
-- 故另立此索引承接 fallback 案例,見 v26 §4.4.2「序號讀取」段
create unique index if not exists uq_digital_usage_printer_unknown on public.digital_usage
  (employee_id, usage_date, path_type, device_id)
  where path_type = 'printer' and sensing_mode = 'auto' and printer_serial is null;

create or replace function public.set_updated_at()
returns trigger
language plpgsql
as $$
begin
  new.updated_at = now();
  return new;
end;
$$;

drop trigger if exists set_company_updated_at on public.company;
create trigger set_company_updated_at
before update on public.company
for each row execute function public.set_updated_at();

drop trigger if exists set_department_updated_at on public.department;
create trigger set_department_updated_at
before update on public.department
for each row execute function public.set_updated_at();

drop trigger if exists set_employee_updated_at on public.employee;
create trigger set_employee_updated_at
before update on public.employee
for each row execute function public.set_updated_at();

drop trigger if exists set_waste_bin_updated_at on public.waste_bin;
create trigger set_waste_bin_updated_at
before update on public.waste_bin
for each row execute function public.set_updated_at();

drop trigger if exists set_device_updated_at on public.device;
create trigger set_device_updated_at
before update on public.device
for each row execute function public.set_updated_at();

drop trigger if exists set_emission_factor_updated_at on public.emission_factor;
create trigger set_emission_factor_updated_at
before update on public.emission_factor
for each row execute function public.set_updated_at();

drop trigger if exists set_device_binding_updated_at on public.device_binding;
create trigger set_device_binding_updated_at
before update on public.device_binding
for each row execute function public.set_updated_at();

drop trigger if exists set_binding_code_updated_at on public.binding_code;
create trigger set_binding_code_updated_at
before update on public.binding_code
for each row execute function public.set_updated_at();

drop trigger if exists set_travel_record_updated_at on public.travel_record;
create trigger set_travel_record_updated_at
before update on public.travel_record
for each row execute function public.set_updated_at();

drop trigger if exists set_waste_session_updated_at on public.waste_session;
create trigger set_waste_session_updated_at
before update on public.waste_session
for each row execute function public.set_updated_at();

drop trigger if exists set_waste_event_updated_at on public.waste_event;
create trigger set_waste_event_updated_at
before update on public.waste_event
for each row execute function public.set_updated_at();

drop trigger if exists set_elevator_trip_updated_at on public.elevator_trip;
create trigger set_elevator_trip_updated_at
before update on public.elevator_trip
for each row execute function public.set_updated_at();

drop trigger if exists set_digital_usage_updated_at on public.digital_usage;
create trigger set_digital_usage_updated_at
before update on public.digital_usage
for each row execute function public.set_updated_at();

comment on column public.device_binding.id_token is
  '裝置粒度憑證,per-device 一枚;4.4.3 事件 ID 與 [D14] 鍵粒度所依賴';
comment on column public.device_binding.refresh_token_hash is
  'Eco-Agent Refresh 的雜湊(裝置粒度)';
comment on column public.app_session.refresh_token_hash is
  'App Refresh 的雜湊(員工手機粒度);與 device_binding.refresh_token_hash 同名、不同粒度';
comment on column public.employee.password_hash is
  '密碼雜湊(bcrypt/argon2);僅 login 驗證用,簽出 token 後不再使用';
comment on column public.digital_usage.path_type is
  '感測對象列舉(computer/printer/drive);[D12] 由 Agent 明送,不由後端推斷';
comment on column public.digital_usage.sensing_mode is
  '感測方式(auto=Agent 自動感測, manual=App 手動彙總上傳);與 path_type 正交,[D16] 新增,四個 partial unique index 皆帶此述詞避免 NULL 互不相等的去重陷阱';
comment on column public.digital_usage.collected_at is
  'Agent 採集時間戳(UTC);[D14] upsert 勝出規則 WHERE EXCLUDED.collected_at > digital_usage.collected_at 所依賴';
comment on column public.digital_usage.printer_serial is
  'SNMP 序號(prtGeneralSerialNumber → entPhysicalSerialNum → sysName 依序試);[D14] per-printer 歸鍵所依賴,手動上傳恆為 NULL';
comment on column public.digital_usage.printer_page_counter is
  '印表機壽命累計讀數(Agent 原樣上送);[D15] print_pages 由後端以本日減前一日差分計算';
comment on column public.device.display_name is
  '裝置顯示名稱(綁定時 Agent 送 hostname 或員工自填);裝置分項一旦對使用者可見,UUID 無法辨識是哪一台,[D14] 補入';
comment on column public.binding_code.device_secret_hash is
  'sha256(device_secret);驗證端點③輪詢者是否為當初索取 code 的同一 Agent,v26 §4.4.2 步驟5.5';
comment on column public.digital_usage.printer_identity_unknown is
  '印表機三候選 OID 皆查無序號時,以 device_id 退回歸鍵並標記此列,v26 §4.4.2「序號讀取」段';
